src/objects/TR1__Call_List_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>TR1__Contact__r.FirstName +  TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>TR1__Contact__r.SMS_Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out__c</fullName>
        <formula>TR1__Contact__r.smagicinteract__SMSOptOut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Call_List_Contact__c</fullName>
        <externalId>true</externalId>
        <label>Call List - Contact</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Call_List__c</fullName>
        <label>Call List</label>
        <referenceTo>TR1__Call_List__c</referenceTo>
        <relationshipLabel>Call List Members</relationshipLabel>
        <relationshipName>Call_List_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Daxtra_Id__c</fullName>
        <formula>TR1__Contact__r.TR1__External_Candidate_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Candidate Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Details__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ TR1__Contact__c ,  TR1__Contact__r.FirstName &amp;&quot; &quot; &amp;  TR1__Contact__r.LastName, &quot;_blank&quot;) 
&amp; BR() &amp; HYPERLINK( &quot;mailto:&quot; &amp; TR1__Contact__r.Email , TR1__Contact__r.Email,&quot;_self&quot;)
&amp; BR() &amp; TR1__Contact__r.Phone</formula>
        <label>Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call List Members</relationshipLabel>
        <relationshipName>Call_List_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p2_lkid=&quot; &amp; TR1__Contact__c &amp; &quot;&amp;rtype=003&amp;retURL=%2F&quot; &amp;  TR1__Call_List__c , IMAGE(&quot;/resource/TR1__Email_Icon&quot;,&quot;Email&quot;,32,32),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Log_a_Call__c</fullName>
        <formula>HYPERLINK(&quot;/00T/e?title=Call&amp;who_id=&quot; &amp;  TR1__Contact__c &amp; &quot;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&quot; &amp; TR1__Call_List__c , IMAGE(&quot;/resource/TR1__CallImage&quot;,&quot;Log a Call&quot;,32,32),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Date_Time__c</fullName>
        <label>SMWS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Status_Code__c</fullName>
        <label>SMWS Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SMWS_Status__c</fullName>
        <label>SMWS Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__View_Activities__c</fullName>
        <formula>HYPERLINK(&quot;/apex/TR1__viewContactActivities?id=&quot;+ TR1__Contact__c , IMAGE(&quot;/resource/TR1__ViewActivities&quot;,&quot;View Activities&quot;,32,32),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__View_Resume__c</fullName>
        <formula>HYPERLINK(&quot;/apex/TR1__ResumeViewer?id=&quot;+ TR1__Contact__c ,IMAGE(&quot;/resource/TR1__ViewResume&quot;,&quot;View Resume&quot;,32,32),&quot;_blank&quot;)</formula>
        <label>View Resume</label>
        <type>Text</type>
    </fields>
    <label>Call List Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NP24_05</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>NP24/05</label>
    </listViews>
    <listViews>
        <fullName>NP_D2D</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>NP - D2D</label>
    </listViews>
    <listViews>
        <fullName>NP_d2d_2021</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>NP d2d 2021.</label>
    </listViews>
    <listViews>
        <fullName>NPwest</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>NPwest</label>
    </listViews>
    <nameField>
        <displayFormat>Mem-{0000000}</displayFormat>
        <label>Call List Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>